--- a/package.json
+++ b/package.json
@@ -1,1 +1,22 @@
-{"name":"babel-repro","version":"1.0.0","private":true,"description":"babel-repro","author":"Kyle Gill","keywords":["gatsby"],"scripts":{"develop":"gatsby develop","start":"gatsby develop","build":"gatsby build","serve":"gatsby serve","clean":"gatsby clean"},"dependencies":{"gatsby":"^2.32.3","react":"^16.13.1","react-dom":"^16.13.1"}}
+{
+  "name": "babel-repro",
+  "version": "1.0.0",
+  "private": true,
+  "description": "babel-repro",
+  "author": "Kyle Gill",
+  "keywords": [
+    "gatsby"
+  ],
+  "scripts": {
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
+  },
+  "dependencies": {
+    "gatsby": "^2.32.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  }
+}
